--- a/app/src/main/res/layout/cardviewmealslist.xml
+++ b/app/src/main/res/layout/cardviewmealslist.xml
@@ -7,6 +7,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardElevation="10dp"
+        android:layout_margin="10dp"
         app:cardCornerRadius="5dp"
         >
 
@@ -160,7 +162,8 @@
                         android:fontFamily="@font/poppins_medium"
                         android:textAlignment="center"
                         android:text="17 g"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        />
 
                 </LinearLayout>
             </LinearLayout>
