--- a/app/src/main/res/layout/dummy.xml
+++ b/app/src/main/res/layout/dummy.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -22,7 +23,7 @@
                 android:layout_marginTop="-110dp"
                 android:layout_marginBottom="-110dp"
                 android:layout_below="@id/textView11"
-                app:srcCompat="@drawable/home_page_image_recipe" />
+                app:srcCompat="@drawable/home_page_header_image" />
 
             <TextView
                 android:id="@+id/textView11"
@@ -53,15 +54,15 @@
                     android:layout_marginEnd="30dp"
                     android:fontFamily="@font/poppins_semibold"
                     android:gravity="left"
-                    android:text="All recipes"
+                    android:text="Latest 🔥 "
                     android:textColor="@color/black"
                     android:textSize="16sp" />
 
                 <Button
-                    android:id="@+id/buttonAllRecipe"
+                    android:id="@+id/buttonAllReceipe"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="120dp"
+                    android:layout_marginStart="125dp"
                     android:backgroundTint="@color/white"
                     android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
                     android:text="See all "
@@ -72,7 +73,107 @@
 
             </LinearLayout>
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/cardViewHomeRecipe"
+                android:layout_below="@id/linearLayoutHome1"
+                android:layout_margin="20dp"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ImageButton
+                        android:id="@+id/savedAllRecipesbutton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/circle"
+                        android:backgroundTint="#FFFFFF"
+                        android:minWidth="48dp"
+                        android:minHeight="48dp"
+                        android:layout_gravity="right"
+                        android:src="@drawable/ic_baseline_pastelred_bookmark_border_24"
+                        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+
+                    <ImageButton
+                        android:id="@+id/pancakeImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_gravity="center_horizontal"
+                        android:background="@drawable/roundcorner"
+                        android:clickable="true"
+                        android:layout_marginBottom="-40dp"
+                        android:contentDescription="@string/hello_blank_fragment"
+                        android:onClick="clickNew"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/french_toast_image" />
+
+                    <TextView
+                        android:id="@+id/pancakeTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="Low Calories French Toast"
+                        android:textColor="@color/black"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginTop="50dp"
+                        android:layout_marginBottom="10dp"
+                        android:textSize="16sp"
+                        />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/linearLayoutHome2"
+                android:layout_below="@id/cardViewHomeRecipe"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/feedsTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="30dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:gravity="left"
+                    android:text="Post feeds "
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/buttonFeed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="115dp"
+                    android:backgroundTint="@color/white"
+                    android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
+                    android:text="See all "
+                    android:textColor="@color/light_pitch"
+                    app:iconGravity="end"
+                    >
+                </Button>
+
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/linearLayoutHome2"
+                android:layout_margin="20dp"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="5dp">
+
+            </androidx.cardview.widget.CardView>
+
         </RelativeLayout>
     </ScrollView>
+
 
 </RelativeLayout>
