--- a/app/src/main/res/layout/fragment_calories_intake_page.xml
+++ b/app/src/main/res/layout/fragment_calories_intake_page.xml
@@ -44,17 +44,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
-        android:layout_marginTop="20dp"
         android:layout_below="@id/calorieIntakeTitle"
         >
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:id="@+id/recyclerViewCalorieIntake"
-            tools:listitem="@layout/cardviewcalorieintake"/>
+            tools:listitem="@layout/cardviewcalorieintake"
+            />
     </ScrollView>
 
 
