--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -10,239 +10,210 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="621dp"
-        android:layout_above="@+id/coordinatorLayout"
-        android:layout_marginBottom="5dp">
+        android:layout_height="wrap_content"
+        android:fillViewport="true" >
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginTop="-110dp"
+                android:layout_marginBottom="-110dp"
+                android:layout_below="@id/textView11"
+                app:srcCompat="@drawable/home_page_header_image" />
 
             <TextView
-                android:id="@+id/TitleHomePage"
+                android:id="@+id/textView11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
                 android:layout_marginStart="30dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginEnd="30dp"
                 android:fontFamily="@font/poppins_semibold"
-                android:text="Find best receipes\nfor cooking"
-                android:textSize="25dp">
+                android:gravity="left"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:text="Bit by Bit : Baby Bites" />
 
-            </TextView>
-
-            <TextView
-                android:id="@+id/textView36"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginLeft="18dp"
-                android:layout_marginTop="20dp"
-                android:drawableRight="@drawable/ic_baseline_local_fire_department_24"
-                android:fontFamily="@font/poppins_semibold"
-                android:text="Latest"
-                android:textSize="20dp">
-
-            </TextView>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/LatestRecipeImage"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:src="@drawable/asian_salmon"
-                    tools:ignore="SpeakableTextPresentCheck">
-
-                </ImageView>
+                android:layout_height="wrap_content"
+                android:id="@+id/linearLayoutHome1"
+                android:layout_below="@id/imageView2"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:text="SUMA SEDAP"
-                    android:textAlignment="center"
-                    android:textSize="25dp"
-                    android:textStyle="bold">
-
-                </TextView>
-            </LinearLayout>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp">
-
-                <TextView
-                    android:id="@+id/AllReceipes"
+                    android:id="@+id/allRecipesTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
+                    android:layout_marginEnd="30dp"
                     android:fontFamily="@font/poppins_semibold"
-                    android:text="All receipes"
-                    android:textSize="20dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"></TextView>
+                    android:gravity="left"
+                    android:text="Latest 🔥 "
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
 
                 <Button
                     android:id="@+id/buttonAllReceipe"
-                    android:layout_width="130dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="30dp"
+                    android:layout_marginStart="125dp"
                     android:backgroundTint="@color/white"
                     android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
                     android:text="See all "
                     android:textColor="@color/light_pitch"
                     app:iconGravity="end"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"></Button>
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayout2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:background="@color/white"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="181dp"
-                    android:layout_height="208dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp"
-                    android:background="@drawable/rectangular_lightgrey"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/recipe1"
-                        android:layout_width="match_parent"
-                        android:layout_height="135dp"
-                        android:src="@drawable/asian_salmon">
-
-                    </ImageView>
-
-                    <TextView
-                        android:id="@+id/recipeName1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="4dp"
-                        android:fontFamily="@font/poppins"
-                        android:text="SUMA SEDAP"
-                        android:textAlignment="center"
-                        android:textSize="15dp"
-                        android:textStyle="bold">
-
-                    </TextView>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_margin="15dp"
-                    android:background="@drawable/rectangular_lightgrey"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/recipe2"
-                        android:layout_width="match_parent"
-                        android:layout_height="135dp"
-                        android:src="@drawable/asian_salmon">
-
-                    </ImageView>
-
-                    <TextView
-                        android:id="@+id/recipeName2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="4dp"
-                        android:fontFamily="@font/poppins"
-                        android:text="SUMA SEDAP"
-                        android:textAlignment="center"
-                        android:textSize="15dp"
-                        android:textStyle="bold">
-
-                    </TextView>
-
-
-                </LinearLayout>
-
+                    >
+                </Button>
 
             </LinearLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:id="@+id/cardViewHomeRecipe"
+                android:layout_below="@id/linearLayoutHome1"
+                android:layout_margin="20dp"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="5dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ImageButton
+                        android:id="@+id/savedAllRecipesbutton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/circle"
+                        android:backgroundTint="#FFFFFF"
+                        android:minWidth="48dp"
+                        android:minHeight="48dp"
+                        android:layout_gravity="right"
+                        android:src="@drawable/ic_baseline_pastelred_bookmark_border_24"
+                        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+
+                    <ImageButton
+                        android:id="@+id/pancakeImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_gravity="center_horizontal"
+                        android:background="@drawable/roundcorner"
+                        android:clickable="true"
+                        android:layout_marginBottom="-40dp"
+                        android:contentDescription="@string/hello_blank_fragment"
+                        android:onClick="clickNew"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/french_toast_image" />
+
+                    <TextView
+                        android:id="@+id/pancakeTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="Low Calories French Toast"
+                        android:textColor="@color/black"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginTop="50dp"
+                        android:layout_marginBottom="10dp"
+                        android:textSize="16sp"
+                        />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/linearLayoutHome2"
+                android:layout_below="@id/cardViewHomeRecipe"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/Feed"
+                    android:id="@+id/feedsTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
+                    android:layout_marginEnd="30dp"
                     android:fontFamily="@font/poppins_semibold"
-                    android:text="Feed"
-                    android:textSize="20dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"></TextView>
+                    android:gravity="left"
+                    android:text="Post feeds "
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
 
                 <Button
                     android:id="@+id/buttonFeed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="115dp"
                     android:backgroundTint="@color/white"
                     android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
                     android:text="See all "
                     android:textColor="@color/light_pitch"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"></Button>
+                    app:iconGravity="end"
+                    >
+                </Button>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="15dp"
-                android:background="@drawable/rectangular_lightgrey"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="10dp"
-                    android:text="Quote of the day!"
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:textStyle="bold">
-
-                </TextView>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:textColor="@color/white"
-                    android:layout_marginLeft="15dp"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:text="\'To ensure good health: eat lightly, breathe deeply, live moderately, cultivate cgeerfulness, and maintain an interest in life\' - William Londen"></TextView>
             </LinearLayout>
+            <androidx.cardview.widget.CardView
+                android:id = "@+id/CardViewFeedText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/linearLayoutHome2"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="5dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="100dp"
+                tools:layout_editor_absoluteX="1dp"
+                tools:layout_editor_absoluteY="188dp"
+                >
 
-        </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/textFeedLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="15dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/postTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_semibold"
+                        android:text="Quote of the day!"
+                        android:textColor="@color/black"
+                        android:textSize="16dp"
+                        >
+
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/postDescription"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins_medium"
+                        android:text="\'To ensure good health: eat lightly, breathe deeply, live moderately, cultivate cgeerfulness, and maintain an interest in life\' - William Londen"
+                        android:textColor="@color/pastel_red"
+                        android:textSize="13dp">
+
+                    </TextView>
+
+                </LinearLayout>
+
+
+            </androidx.cardview.widget.CardView>
+        </RelativeLayout>
     </ScrollView>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
