--- a/app/src/main/res/layout/fragment_calorie_counter_page.xml
+++ b/app/src/main/res/layout/fragment_calorie_counter_page.xml
@@ -54,7 +54,7 @@
                 android:layout_marginEnd="10dp"
                 android:orientation="horizontal">
 
-                <TextView
+                <EditText
                     android:id="@+id/dateText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -86,7 +86,7 @@
                 android:layout_marginEnd="10dp"
                 android:orientation="horizontal">
 
-                <TextView
+                <EditText
                     android:id="@+id/timeText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
